--- a/HTML/web-dev-home-4/web-dev-home-4/tailwind_css/09-tailwind.html
+++ b/HTML/web-dev-home-4/web-dev-home-4/tailwind_css/09-tailwind.html
@@ -78,6 +78,48 @@
       </div>
     </section>
 
+    <!-- Homework Section -->
+    <section class="flex items-center justify-center py-16">
+      <div class="flex flex-col md:flex-row items-center space-x-8 space-y-8 md:space-y-0">
+        <div class="text-center md:text-left">
+          <p class="text-gray-600 italic">Code is the art that creates worlds.</p>
+        </div>
+        <div class="w-48 h-48 overflow-hidden rounded-full">
+          <img src="../img/gar1.jpg" alt="Garold" class="w-full h-full object-cover" />
+        </div>
+      </div>
+    </section>
+
+    <section class="flex items-center justify-center py-16">
+      <div class="flex flex-col md:flex-row items-center space-x-8 space-y-8 md:space-y-0">
+        <div class="w-48 h-48 overflow-hidden rounded-full">
+          <img src="../img/gar2.jpg" alt="G" class="w-full h-full object-cover" />
+        </div>
+        <div class="text-center md:text-left">
+          <p class="text-gray-600 italic">Every line of code is a step towards perfection.</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="py-16 grid grid-cols-1 md:grid-cols-3 gap-8 container mx-auto px-4">
+      <div class="text-center">
+        <img src="../img/gar3.jpg" alt="Image 1" class="w-48 h-48 rounded-full mx-auto object-cover mb-4" />
+        <h3 class="text-gray-600 italic">Inspiring quote 1</h3>
+        <p class="text-gray-600">Technologies change, but the pursuit of excellence remains timeless.</p>
+      </div>
+      <div class="text-center">
+        <img src="../img/gar4.jpg" alt="Image 2" class="w-48 h-48 rounded-full mx-auto object-cover mb-4" />
+        <h3 class="text-gray-600 italic">Inspiring quote 2</h3>
+        <p class="text-gray-600">Challenges aren’t obstacles, they’re opportunities for growth.</p>
+      </div>
+      <div class="text-center">
+        <img src="../img/gar5.jpg" alt="Image 3" class="w-48 h-48 rounded-full mx-auto object-cover mb-4" />
+        <h3 class="text-gray-600 italic">Inspiring quote 3</h3>
+        <p class="text-gray-600">Be the best at what you love, and success will follow.</p>
+      </div>
+    </section>
+
+
     <!-- Latest Content Section -->
     <section class="content py-16 bg-gray-100">
       <div class="container mx-auto">
@@ -126,10 +168,47 @@
     </section>
 
     <!-- Footer Section -->
-    <footer class="bg-gray-800 text-white py-6">
-      <div class="container mx-auto text-center">
-        <p class="text-sm">&copy; 2024 Your Website. All rights reserved.</p>
+    <section class="bg-blue-800 text-white py-8">
+      <div class="container mx-auto px-4 pr-28 flex justify-between items-center">
+        <div class="flex items-center">
+          <div class="w-24 h-24 bg-cyan-400 rounded-full flex justify-center items-center text-white text-2xl mr-28">
+            LOGO
+          </div>
+        </div>
+        <div class="flex space-x-8 w-full justify-between">
+          <div>
+            <h4 class="font-semibold">Company</h4>
+            <ul>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Jobs</a></li>
+              <li><a href="#">Press</a></li>
+              <li><a href="#">Blog</a></li>
+            </ul>
+          </div>
+          <div>
+            <h4 class="font-semibold">More</h4>
+            <ul>
+              <li><a href="#">Code of Conduct</a></li>
+              <li><a href="#">Privacy Policy</a></li>
+              <li><a href="#">Terms of Use</a></li>
+              <li><a href="#">License</a></li>
+            </ul>
+          </div>
+          <div>
+            <h4 class="font-semibold">Support</h4>
+            <ul>
+              <li><a href="#">Contact</a></li>
+              <li><a href="#">Help</a></li>
+              <li><a href="#">FAQ</a></li>
+              <li><a href="#">Legal</a></li>
+            </ul>
+          </div>
+        </div>
       </div>
-    </footer>
+    </section>
+
+    <section class="height text-dark py-4 text-center">
+      <p>Copyright &copy; 2024</p>
+    </section>
   </body>
 </html>
