--- a/HTML/web-dev-home-4/web-dev-home-4/simple_css/07-simple-css.html
+++ b/HTML/web-dev-home-4/web-dev-home-4/simple_css/07-simple-css.html
@@ -55,18 +55,44 @@
       </div>
     </section>
 
-    <!-- Homework section-->
-<section class="content flex align-center">
- 
-  <div>
-    <p class="text-block">
-      The one who doesn't strive for excellence has already chosen the path of mediocrity. Your efforts today define your success tomorrow. Fear of failure is the first step towards great achievement. Be bold in your dreams and relentless in your pursuit. Every day is an opportunity to become better than you were yesterday.
-    </p>
-  </div> 
-  <div>
-    <img src="../img/garold.jpg" alt="garold" height="100px">
-  </div>
-</section>
+    <!-- Homework section -->
+
+    <section class="text-image-section">
+      <div class="text-content">
+        <p>Code is the art that creates worlds.</p>
+      </div>
+      <div class="image-content">
+        <img src="../img/gar1.jpg" alt="Garold" class="square-img">
+      </div>
+    </section>
+
+    <section class="text-image-section">
+      <div class="image-content">
+        <img src="../img/gar2.jpg" alt="G" class="square-img">
+      </div>
+      <div class="text-content">
+        <p>Every line of code is a step towards perfection.</p>
+      </div>
+    </section>
+
+    <section class="three-column-section">
+      <div class="column">
+        <img src="../img/gar3.jpg" alt="Image 1" class="column-image">
+        <h3>Inspiring quote 1</h3>
+        <p>Technologies change, but the pursuit of excellence remains timeless.</p>
+      </div>
+      <div class="column">
+        <img src="../img/gar4.jpg" alt="Image 2" class="column-image">
+        <h3>Inspiring quote 2</h3>
+        <p>Challenges aren’t obstacles, they’re opportunities for growth.</p>
+      </div>
+      <div class="column">
+        <img src="../img/gar5.jpg" alt="Image 3" class="column-image">
+        <h3>Inspiring quote 3</h3>
+        <p>Be the best at what you love, and success will follow.</p>
+      </div>
+    </section>
+
 
 
     <!-- Latest Content Section -->
@@ -87,5 +113,44 @@
     </section>
 
     <!-- Footer Section -->
+
+   <section class="footer">
+    <div class="logo-container">
+      <span class="logo-text">LOGO</span>
+    </div>
+    <div class="column"> 
+     <h4>Company</h4>
+     <ul>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">Blog</a></li>
+     </ul>
+    </div>
+    <div class="column">
+     <h4>More</h4>
+     <ul>
+      <li><a href="#">Code of Conduct</a></li>
+      <li><a href="#">Privacy Policy</a></li>
+      <li><a href="#">Terms of Use</a></li>
+      <li><a href="#">License</a></li>
+     </ul>
+    </div>
+    <div class="column">
+     <h4>Support</h4>
+     <ul>
+      <li><a href="#">Contact</a></li>
+      <li><a href="#">Help</a></li>
+      <li><a href="#">FAQ</a></li>
+      <li><a href="#">Legal</a></li>
+     </ul>
+    </div>
+   </section>
+
+   <section class="footer-bottom">
+    <div class="container">
+      <p> Copyright &copy; 2024</p>
+    </div>
+   </section>
   </body>
 </html>
